@@ -287,4 +287,10 @@ sub targetHAProxySSLPort
     }
 }
 
+# only override if it is a internal service not modifiable by the user
+sub HAProxyInternalService
+{
+    return undef;
+}
+
 1;
