@@ -1,4 +1,5 @@
 HEAD
+	+ Changes in haproxy port validation and allow haproxy internal services
 	+ Added to findValueMultipleFields and findValue the nosync parameter
 	+ Added support for haproxy 1.5
 	+ Moved nginx to listen on localhost
